# youtube_distiller

./: .gitignore  README.md  pyproject.toml
scripts/: summarize_video.py
skills/youtube-distiller/: SKILL.md  requirements.txt
skills/youtube-distiller/agents/: openai.yaml
skills/youtube-distiller/references/: output-contract.md
skills/youtube-distiller/scripts/: summarize_video.py
skills/youtube-distiller/youtube_distiller/: transcript.py  visual.py
tests/: test_cli_ytdlp_options.py  test_source_policy.py  test_transcript.py  test_visual.py
tests/fixtures/: sample.vtt
youtube_distiller/: __init__.py  source_policy.py  transcript.py  visual.py
