[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-distiller"
version = "0.1.0"
description = "Evidence-grounded YouTube and local video distillation for agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "yt-dlp>=2025.10.14",
  "faster-whisper>=1.2.1",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["youtube_distiller*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
